--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 
         <div class="app">
-            <form class="signup-form" action="https://lumi.onoff.ma/start.php" method="post">
+            <form class="signup-form" action="https://lumi.legals.ma/start.php" method="post">
 			
 			
 			
